--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,4 +8,18 @@
 .container {
     max-width: 1400px;
     margin: 0 auto;
+    width: 100%;
+}
+
+.buttonBrawn{
+    border-radius: 4px;
+    border: none;
+    background-color: #C0A690;
+    height: 40px;
+    padding: 0 36px;
+    display: flex;
+    width: fit-content;
+    font-size: 18px;
+    cursor: pointer;
+    align-items: center;
 }
