--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -28,3 +28,83 @@ a {
     height: 36px;
     box-sizing: border-box;
 }
+
+h1 {
+    color: #B5651F;
+    font-size: 4rem;
+    font-weight: 400;
+}
+
+section.banner {
+    display: flex;
+    align-items: center;
+    margin-top: 80px;
+    width: 100%;
+    justify-content: space-between;
+}
+
+section.banner > .content {
+    display: flex;
+    flex-direction: column;
+    gap: 48px;
+}
+
+section.benefits {
+    display: flex;
+    align-content: center;
+    justify-content: space-between;
+    max-width: 1000px;
+    margin: 100px auto 0;
+}
+
+.benefit {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    align-items: center;
+    font-size: 20px;
+}
+
+section.categorySection {
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+}
+
+section.categorySection > button {
+
+}
+
+.categories {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    gap: 26px;
+}
+
+.categories > img {
+    width: 250px;
+}
+
+section.topSection {
+    margin-top: 100px;
+}
+
+.top {
+    display: flex;
+    gap: 16px;
+    justify-content: space-between;
+}
+
+.top-left {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.top-right {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
