--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,34 +1,3 @@
-header {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    height: 80px;
-    justify-content: space-between;
-    gap: 80px;
-}
-
-nav {
-    display: flex;
-    align-items: center;
-    color: #969696;
-    font-size: 1.2rem;
-    font-weight: bold;
-    gap: 40px;
-}
-
-a {
-    color: #969696;
-}
-
-.search {
-    border: 1px solid #969696;
-    border-radius: 16px;
-    padding: 16px 16px;
-    outline: none;
-    height: 36px;
-    box-sizing: border-box;
-}
-
 h1 {
     color: #B5651F;
     font-size: 4rem;
@@ -106,5 +75,19 @@ section.topSection {
 
 .top-right {
     display: grid;
+    justify-content: space-between;
     grid-template-columns: 1fr 1fr;
+    width: 100%;
+    gap: 24px;
+}
+
+.product-card {
+    display: flex;
+    justify-content: center;
+}
+
+.product-card > div {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
 }
