--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -23,3 +23,16 @@
     cursor: pointer;
     align-items: center;
 }
+
+.buttonBrawnOutlined {
+    border-radius: 4px;
+    background-color: inherit;
+    border: 1px solid #C0A690;
+    height: 40px;
+    padding: 0 36px;
+    display: flex;
+    width: fit-content;
+    font-size: 18px;
+    cursor: pointer;
+    align-items: center;
+}
